working on allowing search of list boxes

--- a/WAV2ByteArray/WAV2ByteArray.csproj
+++ b/WAV2ByteArray/WAV2ByteArray.csproj
@@ -57,7 +57,7 @@
     </ApplicationDefinition>
     <Compile Include="AFindButtonsProperties.cs" />
     <Compile Include="AnAddressBarsProperties.cs" />
-    <Compile Include="ButtonNamingIndex.cs" />
+    <Compile Include="RankedNameModel.cs" />
     <Compile Include="ByteFactory.cs" />
     <Compile Include="UserInputPage.xaml.cs">
       <DependentUpon>UserInputPage.xaml</DependentUpon>
